@@ -26,8 +26,8 @@ recommends:
   Test::More: '1.001003'
 requires:
   Carp: '0'
+  Data::DPath: '0'
   Dist::Zilla::Tester: '0'
-  Module::Runtime: '0'
   Moose: '0'
   Path::Tiny: '0'
   Sub::Exporter: '0'
@@ -49,6 +49,7 @@ x_BuiltWith:
   modules:
     CPAN::Meta: '2.142060'
     Carp: '1.34'
+    Data::DPath: '0.50'
     Dist::Zilla::App::Command::bakeini: '0.001002'
     Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes: '0.002002'
     Dist::Zilla::Plugin::Authority: '1.006'
@@ -98,7 +99,6 @@ x_BuiltWith:
     Dist::Zilla::Tester: '5.020'
     ExtUtils::MakeMaker: '6.98'
     File::Spec: '3.48'
-    Module::Runtime: '0.014'
     Moose: '2.1211'
     Path::Tiny: '0.056'
     Pod::Coverage::TrustPod: '0.100003'
