@@ -21,8 +21,8 @@ my %WriteMakefileArgs = (
   "NAME" => "Dist::Zilla::Util::Test::KENTNL",
   "PREREQ_PM" => {
     "Carp" => 0,
+    "Data::DPath" => 0,
     "Dist::Zilla::Tester" => 0,
-    "Module::Runtime" => 0,
     "Moose" => 0,
     "Path::Tiny" => 0,
     "Sub::Exporter" => 0,
@@ -49,10 +49,10 @@ my %WriteMakefileArgs = (
 
 my %FallbackPrereqs = (
   "Carp" => 0,
+  "Data::DPath" => 0,
   "Dist::Zilla::Tester" => 0,
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
-  "Module::Runtime" => 0,
   "Moose" => 0,
   "Path::Tiny" => 0,
   "Sub::Exporter" => 0,
