@@ -17,10 +17,9 @@ use Test::DZil qw( Builder );
 use Test::Fatal qw( exception );
 use Test::More qw( );
 use Path::Tiny qw(path);
-use Module::Runtime qw( require_module );
 
 ## no critic (ValuesAndExpressions::ProhibitConstantPragma,ErrorHandling::RequireCheckingReturnValueOfEval,Subroutines::ProhibitSubroutinePrototypes)
-use constant CAN_DPATH => eval { require_module('Data::DPath'); 1 };
+use constant CAN_DPATH => eval { require Data::DPath; 1 };
 sub dpath($);
 BEGIN { CAN_DPATH and Data::DPath->import('dpath') }
 ## use critic
