@@ -71,8 +71,8 @@ do { my $x = {
                                       },
                       'requires' => {
                                       'Carp' => '0',
+                                      'Data::DPath' => '0',
                                       'Dist::Zilla::Tester' => '0',
-                                      'Module::Runtime' => '0',
                                       'Moose' => '0',
                                       'Path::Tiny' => '0',
                                       'Sub::Exporter' => '0',
