@@ -1,6 +1,9 @@
 Revision history for Dist-Zilla-Util-Test-KENTNL
 
 1.001001 2014-08-18T21:15:14Z
+ [Dependencies::Stats]
+ - Dependencies changed since 1.001000, see misc/*.deps* for details
+ - runtime: +2 -1
 
 1.001000 2014-08-18T21:14:28Z
  [00 Major]
